# esp-cryptoauthlib

./: .gitignore  CMakeLists.txt  Kconfig  README.md  THIRD-PARTY-LICENSES.txt  component.mk  idf_component.yml
port/: atca_cfgs_port.c  atca_config.h  hal_core2foraws_i2c.c
